Fix bug task bode overflow

--- a/src/components/change-task-form/change-task-form.sass
+++ b/src/components/change-task-form/change-task-form.sass
@@ -2,8 +2,10 @@
 
 .task-form
     &__body
+        width: 100%
         height: calc(100% - 2.75rem)
-        overflow: auto
+        overflow-y: auto
+        overflow-x: hidden
 
     &__container
         padding: 0 1.25rem
